@@ -1,7 +1,10 @@
-2007-12-18
+2012-10-07
 TecnoballZ 0.92+
 The code was compiled with GCC 4.3
 Fix Makefile
+Fix bugs sprites (balls and and gems) are drawn on the right panel.
+Fixed a segfault caused by a calculation of coordinates of sprites unsigned.
+
 
 2007-11-19
 TecnoballZ 0.92
